many changes, i get confused - using ModelMapper - CompetitionWithParticipantsList object return